--- a/src/Game.css
+++ b/src/Game.css
@@ -7,6 +7,7 @@
 }
 body {
   min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,10 +18,14 @@ body {
 }
 h1 {
   font-weight: 900;
-  margin: 30px 200px;
+  font-size: 30px;
+  font-style: bold;
+  margin: 3px 200px;
   align-items: center;
   justify-content: center;
+  letter-spacing: 1px;
 }
+
 .container {
   display: flex;
   justify-content: center;
@@ -28,10 +33,12 @@ h1 {
 }
 .container .section {
   width: 350px;
-  margin: 20px 50px;
+  margin: 80px 50px 5px 50px;
 }
 .section {
   border-radius: 50px;
+  box-shadow: 0 4px 8px 5px rgba(0, 0, 0, 0.5),
+    0 6px 20px 5px rgba(0, 0, 0, 0.19);
 }
 .section .info {
   background: rgb(10, 10, 10);
@@ -79,9 +86,9 @@ h2 {
   padding-top: 150px;
 }
 .attack-btn button {
-  margin: 0 20px;
+  margin: 0 30px;
   padding: 25px;
-  border-radius: 50%;
+  border-radius: 45px;
   border: none;
   outline: none;
   cursor: pointer;
